--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Feb  3 20:08:05 2010  Tanaka Akira  <akr@fsij.org>
+
+	* file.c (realpath_rec): rb_path_last_separator may return NULL.
+
 Wed Feb  3 13:15:24 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* thread_pthread.c: DragonFlyBSD is also the same as FreeBSD
