* ext/iconv/charset_alias.rb: pass block argument to outer local   variable.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26552 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Feb  3 20:10:52 2010  Tanaka Akira  <akr@fsij.org>
+
+	* ext/iconv/charset_alias.rb: pass block argument to outer local
+	  variable.
+
 Wed Feb  3 20:08:05 2010  Tanaka Akira  <akr@fsij.org>
 
 	* file.c (realpath_rec): rb_path_last_separator may return NULL.
