--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Feb  3 22:22:30 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* configure.in: check for non-portable stack attribute functions.
+
 Wed Feb  3 20:10:52 2010  Tanaka Akira  <akr@fsij.org>
 
 	* ext/iconv/charset_alias.rb: pass block argument to outer local
