--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Feb  4 00:37:43 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* time.c (time_mdump, time_mload): dump/load utc_offset.
+	  [ruby-dev:40063]
+
 Wed Feb  3 22:22:30 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* configure.in: check for non-portable stack attribute functions.
