--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Wed Feb 4  01:06:00 2010 Kirk Haines <khaines@ruby-lang.org>
+
+	* eval.c: Backport #1743 [ruby-core:24203]; stops timer thread unless other threads exist.
+
 Wed Jan 28 04:00:00 2010 Kirk Haines <khaines@ruby-lang.org>
 
 	* io.c: Backport #2009 [ruby-core:25173]; (rb_io_fptr_finalize): free fptr to avoid memory leaks.
