* ext/bigdecimal/bigdecimal.c (BigDecimal_DoDivmod): fix infinity   handling.  1 / Infinity was evaluated to NaN.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26563 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Feb  4 01:24:01 2010  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* ext/bigdecimal/bigdecimal.c (BigDecimal_DoDivmod): fix infinity
+	  handling.  1 / Infinity was evaluated to NaN.
+
 Thu Feb  4 00:37:43 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* time.c (time_mdump, time_mload): dump/load utc_offset.
