merges r26052 from trunk into ruby_1_9_1. -- * string.c (rb_str_justify): fixed the case a fill size is a   multiple of the length of the padding.  [ruby-dev:39856]
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/branches/ruby_1_9_1@26568 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Dec  9 09:50:35 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* string.c (rb_str_justify): fixed the case a fill size is a
+	  multiple of the length of the padding.  [ruby-dev:39856]
+
 Sat Oct 31 17:19:28 2009  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>
 
 	* lib/net/http.rb (Net::HTTPResponse#each_response_header):
