--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+Thu Feb 26 13:23:20 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* iseq.c (cdhash_each): resurrects internal literals.
+
+Wed Feb 18 14:33:35 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* array.c (rb_ary_resurrect), string.c (rb_str_resurrect): new
+	  functions based on [ruby-dev:37983]
+
+	* insns.def (putstring, duparray): use rb_{ary,str}_resurrect().
+
+	* iseq.c (iseq_data_to_ary): needs to result TS_VALUE.
+
 Wed Dec  9 09:50:35 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* string.c (rb_str_justify): fixed the case a fill size is a
