* bignum.c (big_gt, big_ge, big_lt, big_ge): added Bignum#>, >=, < and   <= to allow to compare with BigDecimal.  [ruby-dev:40167]
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26574 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Fri Feb  5 00:34:24 2010  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* bignum.c (big_gt, big_ge, big_lt, big_ge): added Bignum#>, >=, < and
+	  <= to allow to compare with BigDecimal.  [ruby-dev:40167]
+
 Thu Feb  4 15:47:27 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* thread_pthread.c (native_thread_init_stack): use get_stack.
