Syntax change and dead code cleanup to help resolve some build issues on certain platforms.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/branches/ruby_1_8_6@26577 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Fri Feb 5  07:19:00 2010 Kirk Haines <khaines@ruby-lang.org>
+
+	* eval.c: Small syntax change and dead code removal to fix build problems on some platforms.
+
+	* process.c: Dead code removal.
+
 Wed Feb 4  01:06:00 2010 Kirk Haines <khaines@ruby-lang.org>
 
 	* eval.c: Backport #1743 [ruby-core:24203]; stops timer thread unless other threads exist.
