* lib/delegate.rb (Delegator): include copy of Kernel.   [ruby-dev:40314]
* lib/delegate.rb (Delegator#{dup,clone}): class of copy should be
  Delegator.  [ruby-dev:40313]


git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26580 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+Fri Feb  5 16:38:08 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/delegate.rb (Delegator): include copy of Kernel.
+	  [ruby-dev:40314]
+
+	* lib/delegate.rb (Delegator#{dup,clone}): class of copy should be
+	  Delegator.  [ruby-dev:40313]
+
 Fri Feb  5 09:26:54 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* bignum.c (big_op): remove unused variables.
