--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Sat Feb  6 00:02:31 2010  Tanaka Akira  <akr@fsij.org>
+
+	* random.c (fill_random_seed): don't use O_NOFOLLOW because
+	  /dev/urandom is a symlink in OpenSolaris.
+
+	* lib/securerandom.rb (SecureRandom.random_bytes: ditto.
+	  
 Fri Feb  5 16:38:08 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* lib/delegate.rb (Delegator): include copy of Kernel.
