--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Feb  6 01:14:54 2010  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* ext/purelib.rb, common.mk: to simulate ruby command more precisely,
+	  remove "." from $: of virtual environment for build and test.
+
 Sat Feb  6 00:02:31 2010  Tanaka Akira  <akr@fsij.org>
 
 	* random.c (fill_random_seed): don't use O_NOFOLLOW because
