* ext/socket/ipsocket.c (ip_addr, ip_peeraddr),   ext/socket/socket.c (sock_s_getaddrinfo): added optional   reverse_lookup flag.  [ruby-core:28007]
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26590 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sat Feb  6 11:35:08 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* ext/socket/ipsocket.c (ip_addr, ip_peeraddr),
+	  ext/socket/socket.c (sock_s_getaddrinfo): added optional
+	  reverse_lookup flag.  [ruby-core:28007]
+
 Sat Feb  6 01:55:02 2010  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* ext/stringio/stringio.c (strio_ungetc): pads with \000 when the
