* lib/delegate.rb (Delegator#method_missing),   (Delegator.delegating_block): don't hide backtrace from   __getobj__ and reduced exception messages when $DEBUG.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26592 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sat Feb  6 12:02:36 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/delegate.rb (Delegator#method_missing),
+	  (Delegator.delegating_block): don't hide backtrace from
+	  __getobj__ and reduced exception messages when $DEBUG.
+
 Sat Feb  6 11:35:08 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ext/socket/ipsocket.c (ip_addr, ip_peeraddr),
