* tool/compile_prelude.rb: fix require path.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26593 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sat Feb  6 19:35:16 2010  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* tool/compile_prelude.rb: fix require path.
+
 Sat Feb  6 12:02:36 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* lib/delegate.rb (Delegator#method_missing),
