added a ChangeLog entry.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26600 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Sat Feb  6 22:57:00 2010  Shugo Maeda  <shugo@ruby-lang.org>
+
+	* lib/net/imap.rb (receive_responses): does not hang when an
+	  unexpected BYE response received.  fixed [ruby-core:27944].
+	  Thanks, Bob Potter.
+
 Sat Feb  6 21:31:23 2010  Shugo Maeda  <shugo@ruby-lang.org>
 
 	* lib/monitor.rb (wait): supported timeout.
