added a ChangeLog entry.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26604 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Feb  6 23:25:57 2010  Shugo Maeda  <shugo@ruby-lang.org>
+
+	* ext/curses/view2.rb: replaced with Hugh Sasse's version.
+	  [ruby-core:27894]
+
 Sat Feb  6 22:57:00 2010  Shugo Maeda  <shugo@ruby-lang.org>
 
 	* lib/net/imap.rb (receive_responses): does not hang when an
