* lib/net/ftp.rb (initialize): set @sock to a NullSocket instance to   raise FTPConnectionError when not connected.   [ruby-dev:40258]
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26605 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Feb  6 23:37:11 2010  Shugo Maeda  <shugo@ruby-lang.org>
+
+	* lib/net/ftp.rb (initialize): set @sock to a NullSocket instance to
+	  raise FTPConnectionError when not connected.   [ruby-dev:40258]
+
 Sat Feb  6 23:25:57 2010  Shugo Maeda  <shugo@ruby-lang.org>
 
 	* ext/curses/view2.rb: replaced with Hugh Sasse's version.
