--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Feb  7 03:01:46 2010  Tanaka Akira  <akr@fsij.org>
+
+	* math.c (math_lgamma): initialize sign because
+	  lgamma(NaN) doesn't set the sign in OpenSolaris.
+
 Sun Feb  7 00:23:21 2010  Shugo Maeda  <shugo@ruby-lang.org>
 
 	* class.c (rb_class_init_copy): raise a TypeError if the argument is 
