* lib/rake.rb (Rake::FileList::ARRAY_METHODS): fix test failure by <=>   definition at Kernel.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26611 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sun Feb  7 12:53:12 2010  Tanaka Akira  <akr@fsij.org>
+
+	* lib/rake.rb (Rake::FileList::ARRAY_METHODS): fix test failure by <=>
+	  definition at Kernel.
+
 Sun Feb  7 03:01:46 2010  Tanaka Akira  <akr@fsij.org>
 
 	* math.c (math_lgamma): initialize sign because
