--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Feb  7 23:08:53 2010  Tanaka Akira  <akr@fsij.org>
+
+	* bootstraptest/runner.rb: sort test files.
+
 Sun Feb  7 12:53:12 2010  Tanaka Akira  <akr@fsij.org>
 
 	* lib/rake.rb (Rake::FileList::ARRAY_METHODS): fix test failure by <=>
