* sample/test.rb: sort files for syntax validataion.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26615 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Sun Feb  7 23:12:34 2010  Tanaka Akira  <akr@fsij.org>
+
+	* sample/test.rb: sort files for syntax validataion.
+
 Sun Feb  7 23:08:53 2010  Tanaka Akira  <akr@fsij.org>
 
 	* bootstraptest/runner.rb: sort test files.
