--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Feb  8 10:28:58 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* configure.in: check pthread_attr_getstack to prevent obsolete
+	  warning for pthread_attr_getstackaddr.
+
 Sun Feb  7 23:12:34 2010  Tanaka Akira  <akr@fsij.org>
 
 	* sample/test.rb: sort files for syntax validataion.
