* dmyversion.c: empty load path in miniruby.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26619 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
-Mon Feb  8 16:23:08 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+Mon Feb  8 16:27:57 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* dmyversion.c: empty load path in miniruby.
 
 	* common.mk (COMPILE_PRELUDE): rbconfig is loaded on demand.
 
