--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Feb  8 21:03:53 2010  Tanaka Akira  <akr@fsij.org>
+
+	* ext/socket/socket.c (socket_s_ip_address_list): obtain the scope_id
+	  of IPv6 link local address on OpenSolaris.
+
 Mon Feb  8 16:27:57 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* dmyversion.c: empty load path in miniruby.
