--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Mon Feb  8 23:49:24 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* io.c (rb_io_getline_fast): wrong calculation of new position
+	  from rb_str_coderange_scan_restartable().  [ruby-core:28103]
+
+	* io.c (read_all): ditto.  
+
+	* sprintf.c (rb_str_format): ditto.
+
 Mon Feb  8 21:03:53 2010  Tanaka Akira  <akr@fsij.org>
 
 	* ext/socket/socket.c (socket_s_ip_address_list): obtain the scope_id
