* lib/rexml/text.rb (REXML::Text#initialize): REXML::Text.new checks   raw text for illegal characters without entity check, for the sake   of 1.8 compatibility.  This had caused rubyspec error.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26624 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Tue Feb  9 21:27:38 2010  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* lib/rexml/text.rb (REXML::Text#initialize): REXML::Text.new checks
+	  raw text for illegal characters without entity check, for the sake
+	  of 1.8 compatibility.  This had caused rubyspec error.
+
 Mon Feb  8 23:49:24 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>
 
 	* io.c (rb_io_getline_fast): wrong calculation of new position
