* vm.c (vm_exec): temporarily revert r26628, which causes SEGV when   executing rubyspec.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26633 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Feb 11 01:45:04 2010  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* vm.c (vm_exec): temporarily revert r26628, which causes SEGV when
+	  executing rubyspec.
+
 Wed Feb 10 16:31:03 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* array.c (rb_ary_push_m, rb_ary_unshift_m, rb_ary_aset),
