--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Feb 11 14:37:39 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* marshal.c (r_object0): read sequentially since marshal source
+	  may not be possible to rewind.  [ruby-dev:40386]
+
 Thu Feb 11 09:49:31 2010  Tanaka Akira  <akr@fsij.org>
 
 	* lib/resolv.rb: fix [ruby-core:28144] reported by Hans de Graaff.
