--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Thu Feb 11 20:43:00 2010  Tanaka Akira  <akr@fsij.org>
+
+	* io.c (rb_io_oflags_modestr): return "r" for O_RDONLY|O_APPEND.
+	  [ruby-dev:40379]
+
 Thu Feb 11 19:19:21 2010  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>
 
 	* missing/alloca.c: s/RUBY_LIB/RUBY_LIB_PREFIX/ [ruby-dev:40395]
