--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Feb 13 12:17:52 2010  Tanaka Akira  <akr@fsij.org>
+
+	* lib/tempfile.rb (Tempfile::Remover): new class to replace
+	  Tempfile.callback.  port r24902 from Ruby 1.8.
+
 Fri Feb 12 17:55:21 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* vm.c (thread_free): fixed typo.
