--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Sat Feb 13 15:01:24 2010  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* marshal.c (id2encidx): duplicated entry for encoding name.
+	  [ruby-dev:40388]
+
 Sat Feb 13 12:17:52 2010  Tanaka Akira  <akr@fsij.org>
 
 	* lib/tempfile.rb (Tempfile::Remover): new class to replace
