* array.c (rb_ary_push_m): use rb_ary_modify instead of   rb_ary_modify_check.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26665 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Feb 15 13:11:47 2010  NARUSE, Yui  <naruse@ruby-lang.org>
+
+	* array.c (rb_ary_push_m): use rb_ary_modify instead of
+	  rb_ary_modify_check.
+
 Sun Feb 14 12:54:44 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* marshal.c (r_object0): removed duplicated entry for regexp.
