--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Feb 15 22:18:49 2010  Tanaka Akira  <akr@fsij.org>
+
+	* time.c (time_add): propagate fixed time offset.
+
 Mon Feb 15 17:42:20 2010  NARUSE, Yui  <naruse@ruby-lang.org>
 
 	* signal.c (USE_SIGALTSTACK): NetBSD can't use sigaltstack(2)
