* ext/zlib/zlib.c (zlib_mem_alloc): suppress valgrind warnings.   http://www.zlib.net/zlib_faq.html#faq36
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26671 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Feb 15 22:25:16 2010  Tanaka Akira  <akr@fsij.org>
+
+	* ext/zlib/zlib.c (zlib_mem_alloc): suppress valgrind warnings.
+	  http://www.zlib.net/zlib_faq.html#faq36
+
 Mon Feb 15 22:18:49 2010  Tanaka Akira  <akr@fsij.org>
 
 	* time.c (time_add): propagate fixed time offset.
