--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Feb 15 22:45:26 2010  Tanaka Akira  <akr@fsij.org>
+
+	* st.c (st_foreach): don't access ptr->hash after func call.
+	  It may access freed area.
+
 Mon Feb 15 22:25:16 2010  Tanaka Akira  <akr@fsij.org>
 
 	* ext/zlib/zlib.c (zlib_mem_alloc): suppress valgrind warnings.
