--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Feb 15 23:08:56 2010  Tanaka Akira  <akr@fsij.org>
+
+	* lib/pstore.rb (PStore#initialize): initialize @thread_safe.
+	  [ruby-core:27853]
+
 Mon Feb 15 22:45:26 2010  Tanaka Akira  <akr@fsij.org>
 
 	* st.c (st_foreach): don't access ptr->hash after func call.
