--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Feb 15 23:37:30 2010  Tanaka Akira  <akr@fsij.org>
+
+	* io.c: check lseek error by errno.  NetBSD 4.0.1 may return -1 as
+	  a file position of tty.
+
 Mon Feb 15 23:08:56 2010  Tanaka Akira  <akr@fsij.org>
 
 	* lib/pstore.rb (PStore#initialize): initialize @thread_safe.
