* ext/dl/method.c: Adding DL::Method as a superclass for DL::Function
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26677 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Feb 16 11:03:19 2010  Aaron Patterson <aaron@tenderlovemaking.com>
+
+	* ext/dl/method.c: Adding DL::Method as a superclass for DL::Function
+
 Mon Feb 15 23:37:30 2010  Tanaka Akira  <akr@fsij.org>
 
 	* io.c: check lseek error by errno.  NetBSD 4.0.1 may return -1 as
