--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Tue Feb 16 20:56:39 2010  Tanaka Akira  <akr@fsij.org>
+
+	* file.c (rb_group_member): renamed from group_member.
+	  don't use group_member() in glibc because it's not valgrind clean.
+	  http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=570047
+
 Tue Feb 16 19:19:21 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* ext/dl/cfunc.c (rb_dlcfunc_call): convert signed value to
