--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Tue Feb 16 21:32:01 2010  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* gc.c (rb_objspace_call_finalizer): always run finalizer at exit,
+	  before object is free'd.  [ruby-dev:40382]
+
 Tue Feb 16 20:56:39 2010  Tanaka Akira  <akr@fsij.org>
 
 	* file.c (rb_group_member): renamed from group_member.
