* gc.c (chain_finalized_object): fix precedence.
git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@26685 b2dd03c8-39d4-4d8f-98ff-823fe69b080e

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Feb 16 22:09:27 2010  Yusuke Endoh  <mame@tsg.ne.jp>
+
+	* gc.c (chain_finalized_object): fix precedence.
+
 Tue Feb 16 21:32:01 2010  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* gc.c (rb_objspace_call_finalizer): always run finalizer at exit,
